--- a/frontproyectogym/src/Components/ContenedorPrincipal/ContenedorPrincipal.module.css
+++ b/frontproyectogym/src/Components/ContenedorPrincipal/ContenedorPrincipal.module.css
@@ -16,10 +16,9 @@
     text-decoration: none;
     color: #157246;
     font-weight: bold;
-    transition: color 0.3s, text-decoration 0.3s; 
+    transition: color 0.2s, text-decoration 0.2s; 
 }
 
 .link a:hover {
-    text-decoration: underline; 
-    color: #0d5e31; 
+    color: #75BE7C; 
 }
