--- a/frontproyectogym/src/index.css
+++ b/frontproyectogym/src/index.css
@@ -1,3 +1,5 @@
 body{
-    font-family: "Edu AU VIC WA NT Hand", cursive;
+    font-family: "PT Sans", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
