--- a/frontproyectogym/src/index.css
+++ b/frontproyectogym/src/index.css
@@ -1,5 +1,5 @@
 body{
-    font-family: "PT Sans", sans-serif;
+    font-family: "PT Serif", serif;
     font-weight: 400;
     font-style: normal;
 }
