--- a/frontproyectogym/src/Components/HeaderInicio/HeaderInicio.module.css
+++ b/frontproyectogym/src/Components/HeaderInicio/HeaderInicio.module.css
@@ -3,14 +3,15 @@
 }
 
 .titulo{
-    font-size: 40px;
+    font-size: 30px;
+    margin-top: 15px;
     font-weight: bold;
 }
 
 .links{
     display: flex;
     gap: 20px;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .links a {
