--- a/frontproyectogym/src/Components/FormularioRegistro/FormularioRegistro.module.css
+++ b/frontproyectogym/src/Components/FormularioRegistro/FormularioRegistro.module.css
@@ -3,12 +3,16 @@
 }
 
 .main{
-    background-color: #F1F1F1;
+    background-color: #F1F1F1; 
 }
 
 .titulo {
     font-weight: bold;
     font-size: 30px;
+}
+
+.formulario{
+
 }
 
 .formulario div {
@@ -21,10 +25,10 @@
 }
 
 .formulario input {
-    width: 389px;
+    width: 400px;
     height: 40px;
-    border: 4px #D9D9D9 solid;
     border-radius: 5px;
+    border: 2px solid #D9D9D9;
 }
 
 .boton {
