--- a/frontproyectogym/src/Components/FormularioRegistro/FormularioRegistro.module.css
+++ b/frontproyectogym/src/Components/FormularioRegistro/FormularioRegistro.module.css
@@ -11,6 +11,10 @@
     font-size: 30px;
 }
 
+
+.contenedorFormulario{
+    max-width: 90%;
+}
 .formulario{
 
 }
@@ -25,7 +29,8 @@
 }
 
 .formulario input {
-    width: 400px;
+    width: 100%;
+    max-width: 400px;
     height: 40px;
     border-radius: 5px;
     border: 2px solid #D9D9D9;
