--- a/frontproyectogym/src/Components/EditarAlimento/EditarAlimento.module.css
+++ b/frontproyectogym/src/Components/EditarAlimento/EditarAlimento.module.css
@@ -1,7 +1,7 @@
 .formulario {
     display: flex;
     flex-direction: column;
-    background-color: #f7fafc; 
+    background-color: #F0F2F5; 
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
