--- a/frontproyectogym/src/Components/PaginaPrincipal/PaginaPrincipal.module.css
+++ b/frontproyectogym/src/Components/PaginaPrincipal/PaginaPrincipal.module.css
@@ -6,3 +6,12 @@
     padding: 5px;
 }
 
+.contenedorPrincipal{
+    margin-top: 30px;
+}
+
+@media (min-width: 992px) {
+    .contenedorPrincipal {
+        margin-top: 0px;
+    }
+}
