--- a/frontproyectogym/src/Components/EditarAlimento/EditarAlimento.module.css
+++ b/frontproyectogym/src/Components/EditarAlimento/EditarAlimento.module.css
@@ -7,7 +7,6 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 500px; 
     margin: auto;
-    margin-top: 20px;
     margin-bottom: 20px;
 }
 
@@ -22,9 +21,6 @@
     margin-bottom: 5px;
 }
 
-.formulario input, .formulario textarea {
-    
-}
 
 .formulario input:focus, .formulario textarea:focus {
     border-color: #80bdff;
@@ -44,4 +40,11 @@
 
 .boton:hover {
     background-color: #218838;
+}
+
+.main{
+    background-color: #F1F1F1;
+    height: 90vh;
+    padding-top: 50px;
+    
 }
