--- a/frontproyectogym/src/Components/FormularioCalorias/FormularioCalorias.module.css
+++ b/frontproyectogym/src/Components/FormularioCalorias/FormularioCalorias.module.css
@@ -1,48 +1,95 @@
-.contenedor {
+.main{
+    max-width: 90%;
+    margin: 0 auto;
+    display: none;
+}
+
+@media(max-width: 767px) {
+    .main {
+        display: block;
+    }
+}
+
+.main div{
     display: flex;
-    gap: 20px;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid black;
+}
+
+.main input, select{
+    border: none;
+    text-align: end;
+    padding: 5px;
+    background-color: #FFFFFF;
+}
+
+.boton{
+    width: 90%;
+}
+
+.imagen{
+    width: 130px;
+    border-radius: 80%;
+}
+
+
+
+.perfil{    
     align-items: center;
     justify-content: center;
-}
-
-.contenedor input, .contenedor select {
-    width: 200px;
-    padding: 10px;
-    border-radius: 20px;
-    margin-bottom: 10px;
-}
-
-@media (max-width: 768px) {
-    .contenedorResponsive {
-        flex-direction: column;
-        gap: 10px;
-    }
-
-    .contenedor input, .contenedor select {
-        width: 100%;
-    }
-
-    .contenedor input, .contenedor select {
-        width: 500px;
-        padding: 10px;
-        border-radius: 20px;
-    }
-
-    .boton{
-        width: 80%;
-        margin-bottom: 20px;
-    }
+    display: flex;
+    flex-direction: column;
+    padding-top: 10px;
+    display: none;
 
 }
 
-@media (max-width: 576px) {
-    .contenedor {
-        width: 100%;
-        padding: 0 10px;
+@media(max-width: 767px) {
+    .perfil {
+        display: flex;
     }
+}
 
-    .contenedor input, .contenedor select {
-        width: 100%;
+.mainOrdenador{
+    display: none;
+}
+
+@media (min-width: 1024px) {
+    .mainOrdenador {
+        display: block;
     }
+}
+
+.formularioOrdenador form{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 60px;
+}
+
+.formularioOrdenador div{
+    border: 3px solid #F1F1F1;
+    border-radius: 5px;
+    padding: 15px 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.formularioOrdenador label{
+    font-size: 25px;
+    text-align: center;
+    font-weight: bold;
+}
+.formularioOrdenador select{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 100;
+    background-color: #FFFFFF;
+}
+
+.formularioOrdenador input{
+    border: none;
+    text-align: center;
+    font-size: 20px;
 }
 
