--- a/frontproyectogym/src/Components/FormularioContenedorAlimentos/FormularioContenedorAlimentos.module.css
+++ b/frontproyectogym/src/Components/FormularioContenedorAlimentos/FormularioContenedorAlimentos.module.css
@@ -14,6 +14,7 @@
 
 .main {
     display: flex;
+    background-color: #F1F1F1;
     align-items: center;
     justify-content: center;
     flex-direction: column;
