--- a/frontproyectogym/src/Components/MiPerfil/MiPerfil.module.css
+++ b/frontproyectogym/src/Components/MiPerfil/MiPerfil.module.css
@@ -27,6 +27,10 @@
     background-color: #F1F1F1;
 }
 
+.main select{
+    background-color: #F1F1F1;
+}
+
 .boton{
     width: 90%;
 }
@@ -90,6 +94,7 @@
     text-align: center;
     font-size: 20px;
     font-weight: 100;
+    background-color: #F1F1F1;
 }
 
 .formularioOrdenador input{
@@ -97,6 +102,4 @@
     text-align: center;
     font-size: 20px;
     background-color: #F1F1F1;
-    
 }
-
