--- a/frontproyectogym/src/Components/FormularioCalorias/FormularioCalorias.module.css
+++ b/frontproyectogym/src/Components/FormularioCalorias/FormularioCalorias.module.css
@@ -21,7 +21,7 @@
     border: none;
     text-align: end;
     padding: 5px;
-    background-color: #FFFFFF;
+    background-color: #F1F1F1;
 }
 
 .boton{
@@ -68,7 +68,7 @@
 }
 
 .formularioOrdenador div{
-    border: 3px solid #F1F1F1;
+    border: 3px solid #ffff;
     border-radius: 5px;
     padding: 15px 30px;
     display: flex;
@@ -84,12 +84,13 @@
     text-align: center;
     font-size: 20px;
     font-weight: 100;
-    background-color: #FFFFFF;
+    background-color: #F1F1F1;
 }
 
 .formularioOrdenador input{
     border: none;
     text-align: center;
     font-size: 20px;
+    background-color: #F1F1F1;
 }
 
