feat: cambiar logo inicio

--- a/frontproyectogym/src/index.css
+++ b/frontproyectogym/src/index.css
@@ -2,5 +2,5 @@ body{
     font-family: "PT Serif", serif;
     font-weight: 400;
     font-style: normal;
-    background-color: #F1F1F1;
+    background-color: #f1f1f1;
 }
