--- a/frontproyectogym/src/Components/HeaderPaginaPrincipal/HeaderPaginaPrincipal.module.css
+++ b/frontproyectogym/src/Components/HeaderPaginaPrincipal/HeaderPaginaPrincipal.module.css
@@ -22,6 +22,7 @@
     transition: border-bottom 0.2s linear;
     text-align: center;
     margin-bottom: 10px;
+    font-size: 20px;
 }
 
 .links a:hover {
